# nara

./: Cargo.toml  README.md
apps/cli/: Cargo.toml
apps/cli/src/: client.rs  error.rs  konan.rs  main.rs
apps/konan_infra/: Cargo.toml
apps/konan_infra/src/: main.rs  scheduler.rs  worker.rs
apps/server/: Cargo.toml
apps/server/src/: db.rs  error.rs  main.rs
apps/server/src/discord/: mod.rs
apps/server/src/discord/commands/: brainiac.rs  konan.rs
apps/server/src/discord/ui/: mod.rs  paginate.rs
apps/server/src/features/: mod.rs
apps/server/src/features/daily_dilly/: collect.rs  mod.rs  schedule.rs  store.rs  summarize.rs
apps/server/src/ops/: mod.rs
apps/server/src/service/: brainiac.rs  konan.rs
apps/titans_tower/: Cargo.toml
apps/titans_tower/src/: db.rs  error.rs  lib.rs  main.rs
apps/titans_tower/src/commands/: brainiac.rs  konan.rs
apps/titans_tower/src/discord/: mod.rs
apps/titans_tower/src/discord/commands/: konan.rs
apps/titans_tower/src/ops/: brainiac.rs  konan.rs  mod.rs
apps/titans_tower/src/service/: konan.rs
apps/titans_tower/src/ui/: mod.rs  paginate.rs
crates/bean/: Cargo.toml
crates/bean/src/: error.rs  lib.rs
crates/bean/src/database/: connection.rs  mod.rs
crates/bean/src/database/migrations/: 001_category.sql  002_entry.sql
crates/brainiac/: Cargo.toml
crates/brainiac/src/: error.rs  lib.rs  scheduling.rs
crates/brainiac/src/database/: connection.rs  mod.rs  models.rs  operations.rs
crates/brainiac/src/database/migrations/: initialize_tables.sql
crates/cadence/: Cargo.toml
crates/cadence/src/: channels.rs  error.rs  executor.rs  lib.rs  queue.rs  registry.rs
crates/cadence/src/database/: connection.rs  mod.rs
crates/cadence/src/database/migrations/: 001_schedule.sql  002_job.sql
crates/konan/: Cargo.toml
crates/konan/src/: lib.rs  scheduler.rs
crates/konan/src/interpreter/: block_adornment.rs  markdown.rs  mod.rs
crates/konan/src/print_ops/: connection.rs  database.rs  mod.rs  print.rs  schedulable.rs
crates/konan/src/print_ops/migrations/: initialize_print_job_table.sql  initialize_schedule_table.sql
crates/konan/src/printer/: element.rs  mod.rs  page_code.rs  printer.rs  rongta.rs
crates/konan/src/template/: box_outline.rs  box_patterns.txt  habit_tracker.rs  mod.rs
crates/titans_tower/: Cargo.toml
crates/titans_tower/src/: bot.rs  channel.rs  error.rs  lib.rs  provision.rs  ui.rs
