[workspace]
resolver = "2"
members = [
  "crates/konan",
  "apps/titans_tower",
  "apps/konan_infra",
  "crates/brainiac",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Cesar <58753718+Ces-D@users.noreply.github.com>"]

[workspace.dependencies]
escpos = { version = "0.17.0", features = [
  "barcodes",
  "codes_2d",
  "graphics",
  "usb",
] }
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
pulldown-cmark = "0.13.1"
serenity = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
poise = "0.6.2"
tokio = { version = "1.51.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time",
] }
thiserror = "2.0.18"
rusqlite = "0.39.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.33.0"
rrule = "0.14.0"
fsrs = "5.2.0"
clap = { version = "4.6.1", features = ["derive"] }
