[package]
name = "nara"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
clap.workspace = true
rrule.workspace = true
chrono.workspace = true

konan_core = { path = "../../crates/konan/" }
