[package]
name = "nara"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
thiserror.workspace = true
clap.workspace = true
rrule.workspace = true
chrono.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "multipart"] }
serde.workspace = true
serde_json.workspace = true

konan_core = { path = "../../crates/konan/" }
cadence_core = { path = "../../crates/cadence/" }
