[package]
name = "nara_server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
rrule.workspace = true
poise.workspace = true
thiserror.workspace = true
tower-http.workspace = true

konan_core = { path = "../../crates/konan/" }
brainiac_core = { path = "../../crates/brainiac/" }
cadence_core = { path = "../../crates/cadence/" }
titans_tower = { path = "../../crates/titans_tower/" }
