[package]
name = "bean"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
thiserror.workspace = true
tokio.workspace = true
