[package]
name = "cadence_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
log.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rrule.workspace = true
thiserror.workspace = true
tokio.workspace = true
