[package]
name = "konan_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
escpos.workspace = true
rand.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
tokio.workspace = true
rusqlite.workspace = true
thiserror.workspace = true
rrule.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
