[package]
name = "konan_core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
log.workspace = true
escpos.workspace = true
rand.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rrule.workspace = true
cadence_core = { path = "../cadence/" }
